--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/usr/lib/java/jsoup-1.10.1.jar"/>
 	<classpathentry kind="lib" path="/usr/lib/java/jdom-2.0.6.jar"/>
+	<classpathentry kind="lib" path="/usr/lib/java/selenium-server-standalone-3.9.1.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
